--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,7 @@
+== 0.7.1 / 20110130
+  * Fixed 1.9.1 Binary Encoding bug when UTF8 set as default (Thanks schmurfy)
+  * Improved rubinius compat for specs
+  * Improved spec compatibility on linux
 == 0.7.0 / 20101222
   * Improved performance of calls to Socket#getsockopt. There are usually
     a lot of calls passing RCVMORE, so we now cache those buffers instead
