add a few new author names from those who provided patches

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -7,3 +7,12 @@ Ar Vicco, github: arvicco
 Ben Mabey, github: bmabey
 
 Julien Ammous, github: schmurfy
+
+Zachary Belzer, github: zbelzer
+
+Cory Forsyth, github: bantic
+
+Stefan Kaes, github: skaes
+
+Dmitry Ustalov, github: eveel
+
