--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,21 @@
+== 0.9.3 / 20111214
+  * Performance optimizations for #getsockopt.
+  
+  * Fixed Message#copy and Message#move. They didn't work before.
+  
+  * Cache LibZM::Msg.size in the ZMQ::Message class so that 
+    initialization can skip recalculating what is effectively a
+    constant value. This speeds up ZMQ::Message instantiation by
+    5 to 10%. Wow.
+    
+  * Modified calls to #super to use explicit arguments (e.g. #super())
+    because otherwise the Ruby runtime has to (at runtime) dig out
+    the arguments that are expected to be passed up the chain. By
+    explicitly listing the args and using parentheses, the runtime
+    can avoid that work and dispatch directly. This effects all
+    Ruby runtimes, but it was through the work of Evan Phoenix that
+    I figured this out. Results in a 2-5% speedup on method dispatch.
+
 == 0.9.2 / 20111115
   * Removed all references to the version4 API.
   
